got basic template but need styles to show

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,20 +38,32 @@
     />
 
     <!-- CSS Libraries -->
-    <!-- <link
+    <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
       rel="stylesheet"
-    /> -->
-    <!-- <link href="lib/flaticon/font/flaticon.css" rel="stylesheet" />
-    <link href="lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" /> -->
+    />
+
+    <link
+      href="../../assets/styles/lib/flaticon/font/flaticon.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="../../assets/styles/lib/animate/animate.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="../../assets/styles/lib/owlcarousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Template Stylesheet -->
-    <!-- <link href="css/style.css" rel="stylesheet" /> -->
+    <link href="../../styles/style.css" rel="stylesheet" />
 
     <!-- CHARITY TEMPLATE END //////////////////////////////////////////// -->
 
@@ -71,5 +83,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="../src/assets/styles/lib/easing/easing.min.js"></script>
+    <script src="../src/assets/styles/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../src/assets/styles/lib/waypoints/waypoints.min.js"></script>
+    <script src="../src/assets/styles/lib/counterup/counterup.min.js"></script>
+    <script src="../src/assets/styles/lib/parallax/parallax.min.js"></script>
+
+    <!-- Contact Javascript File -->
+    <script src="../src/assets/scripts/jqBootstrapValidation.min.js"></script>
+    <script src="../src/assets/scripts/contact.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="../src/assets/scripts/main.js"></script>
   </body>
 </html>
