--- a/client/public/index.html
+++ b/client/public/index.html
@@ -80,19 +80,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/styles/lib/easing/easing.min.js"></script>
-    <script src="/assets/styles/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/assets/styles/lib/waypoints/waypoints.min.js"></script>
-    <script src="/assets/styles/lib/counterup/counterup.min.js"></script>
-    <script src="/assets/styles/lib/parallax/parallax.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" defer></script>
+    <script src="/assets/styles/lib/easing/easing.min.js" defer></script>
+    <script src="/assets/styles/lib/owlcarousel/owl.carousel.min.js" defer></script>
+    <script src="/assets/styles/lib/waypoints/waypoints.min.js" defer></script>
+    <script src="/assets/styles/lib/counterup/counterup.min.js" defer></script>
+    <script src="/assets/styles/lib/parallax/parallax.min.js" defer></script>
 
     <!-- Contact Javascript File -->
-    <script src="/assets/mail/jqBootstrapValidation.min.js"></script>
-    <script src="/assets/mail/contact.js"></script>
+    <script src="/assets/mail/jqBootstrapValidation.min.js" defer></script>
+    <script src="/assets/mail/contact.js" defer></script>
 
     <!-- Template Javascript -->
-    <script src="/assets/scripts/main.js"></script>
+    <script src="/assets/scripts/main.js" defer></script>
   </body>
 </html>
